PROJECT(RATHAXES NONE)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

FIND_PACKAGE(LATEX)

IF (PDFLATEX_COMPILER AND PS2PDF_CONVERTER)
    INCLUDE(maintainers/CMakeScripts/UseLATEX.cmake)
    ADD_SUBDIRECTORY(doc)
ELSE (PDFLATEX_COMPILER AND PS2PDF_CONVERTER)
    MESSAGE(SEND_ERROR "ps2pdf (shipped with ghostscript) and pdflatex needed to generate documentation.")
ENDIF (PDFLATEX_COMPILER AND PS2PDF_CONVERTER)
