ADD_SUBDIRECTORY(cdc)   # Cahier Des Charges
ADD_SUBDIRECTORY(aa)    # Architecture Assessment
ADD_SUBDIRECTORY(ud)    # User Documentation
ADD_SUBDIRECTORY(ta)    # Technical Assessment
ADD_SUBDIRECTORY(rmll)
ADD_SUBDIRECTORY(copil) # Comité de pilotage (Steering Comitee)
ADD_SUBDIRECTORY(final_defense_tek4)
