CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT(CDC_2012 NONE)

FIND_PACKAGE(LATEX)

IF (PDFLATEX_COMPILER)
    INCLUDE(CMakeScripts/UseLATEX.cmake)

    ADD_SUBDIRECTORY(en)
    ADD_SUBDIRECTORY(fr)
ELSE (PDFLATEX_COMPILER)
    MESSAGE(SEND_ERROR "Can't find pdflatex, maybe you need to install TexLive")
ENDIF (PDFLATEX_COMPILER)
